re PR c++/56323 ([C++11] cannot compile inherited constructor for typedef'ed base class)

PR c++/56323
	* name-lookup.c (do_class_using_decl): Handle typedefs with
	inheriting constructors.
	(push_class_level_binding_1): Allow inheriting from template
	template parameter, too.
	* pt.c (tsubst_decl) [USING_DECL]: Likewise.

From-SVN: r196067